--- a/app/src/main/res/layout/activity_recycle_bin.xml
+++ b/app/src/main/res/layout/activity_recycle_bin.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".recycle_bin_activity.RecycleBinActivity">
+        tools:context=".recyclebin.RecycleBinActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -15,26 +15,26 @@
             android:background="?colorPrimary">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/trashToolBar"
+                android:id="@+id/tool_bar_recycle_bin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/recycler_bin"
+                    android:text="@string/all_recycler_bin_cap"
                     android:textSize="@dimen/_14sdp"
                     app:fontFamily="@font/noto_bold" />
             </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/trashHostFragment"
+            android:id="@+id/host_fragment_recycle_bin"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="false"
-            app:navGraph="@navigation/recycle_bin_nav_graph"
+            app:navGraph="@navigation/nav_graph_recycle_bin"
             tools:layout="@layout/fragment_recycle_bin_main" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
