--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,30 +8,30 @@
         android:layout_height="match_parent"
         android:background="?colorPrimary"
         android:orientation="vertical"
-        tools:context=".search_activity.SearchActivity">
+        tools:context=".search.SearchActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/searchToolbar"
+                android:id="@+id/tool_bar_search"
                 android:layout_width="0dp"
                 android:layout_height="0dp" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/searchAutoCompleteLayout"
+                android:id="@+id/ac_tv_layout_search"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:theme="@style/myEditText"
+                android:theme="@style/myEditTextOutlineColor"
                 app:endIconMode="clear_text"
-                app:placeholderText="@string/search"
+                app:placeholderText="@string/menu_search"
                 app:placeholderTextAppearance="@style/myTextSize10sdp"
                 app:startIconDrawable="@drawable/icon_search">
 
                 <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                    android:id="@+id/searchAutoComplete"
+                    android:id="@+id/ac_tv_search"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
                     android:background="@android:color/transparent"
@@ -44,12 +44,12 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/searchHostFragment"
+            android:id="@+id/host_fragment_search"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:navGraph="@navigation/search_nav_graph"
-            tools:layout="@layout/fragment_search" />
+            app:navGraph="@navigation/nav_graph_search"
+            tools:layout="@layout/fragment_search_main" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
